--- a/website_react/src/sections/Hero/HeroStyles.module.css
+++ b/website_react/src/sections/Hero/HeroStyles.module.css
@@ -32,6 +32,8 @@
     }
 
     button {
+        width: 126px;
+        height: 50px;
         background-color: var(--btn-color);
         color: var(--btn-text-color);
         border: none;
@@ -42,7 +44,6 @@
         font-weight: bold;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
         transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
-        
     }
 
     button:hover {
