--- a/website_react/src/sections/Projects/Projects.module.css
+++ b/website_react/src/sections/Projects/Projects.module.css
@@ -36,6 +36,7 @@
         gap: 50px;
     }
     h3{
+        margin-top: 10px;
         font-size: 2.5rem;
         font-weight: bold;
         color: var(--text-color);
