--- a/website_react/src/sections/Projects/Projects.module.css
+++ b/website_react/src/sections/Projects/Projects.module.css
@@ -29,12 +29,6 @@
         transform: scale(1.05);
     }
 
-    .projectsContainer{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 50px;
-    }
     h3{
         margin-top: 10px;
         font-size: 2.5rem;
@@ -44,5 +38,22 @@
     p{
         font-size: 1.25rem;
         color: var(--text-color);
+    }
+}
+
+.projectsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+
+@media (width >= 800px){
+    .projectsContainer{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 0 30px;
     }
 }
