--- a/website_react/src/sections/Skills/SkillsStyles.module.css
+++ b/website_react/src/sections/Skills/SkillsStyles.module.css
@@ -43,3 +43,18 @@
     font-weight: 400;
   }
 }
+
+
+@media (width >=800px) {
+  .skillList{ 
+    max-width: fit-content;
+    gap: 30px;
+    p {
+      font-size: 20px;
+    }
+  }
+
+  hr{
+    width: 300px;
+  }
+}
