--- a/website_react/src/sections/Hero/HeroStyles.module.css
+++ b/website_react/src/sections/Hero/HeroStyles.module.css
@@ -9,7 +9,8 @@
     min-height: 500px;
     
     .hero{
-        max-width: 200px;
+        max-width: 450px;
+        width: 35dvw;
     }
 
     span{
@@ -63,7 +64,7 @@
 .colorMode {
     position: absolute;
     right: 0;
-    width: 25px;
+    width: 30px;
 }
 
 .colorMode:hover {
@@ -73,7 +74,11 @@
 .description {
     max-width: 600px;
     width: 60dvw;
-    min-width: 300px;
+    min-width: 350px;
+    align-self: center;
+    text-align: center;
+    margin: auto;
+    font-size: 1.1rem;
 }
 
 .info {
@@ -89,11 +94,6 @@
         align-items: center;
         justify-content: space-evenly;
     }
-
-    .hero {
-        max-width: 350px;
-        width: 350px;
-    }
 }
 
 @media (width >=1400px) {
@@ -101,10 +101,5 @@
         flex-direction: row-reverse;
         align-items: center;
         justify-content: space-evenly;
-    }
-
-    .hero {
-        max-width: 400px;
-        width: 400px;
     }
 }
