fix final design

--- a/website_react/src/sections/Hero/HeroStyles.module.css
+++ b/website_react/src/sections/Hero/HeroStyles.module.css
@@ -9,8 +9,9 @@
     min-height: 500px;
     
     .hero{
-        max-width: 450px;
+        max-width: 750px;
         width: 35dvw;
+        min-width: 300px;
     }
 
     span{
