--- a/website_react/src/App.css
+++ b/website_react/src/App.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 0 auto 60px;
+    margin-top: 3.5dvh;
     background-color: var(--background-color);
 }
 
